--- a/05Interaction/index.html
+++ b/05Interaction/index.html
@@ -36,6 +36,12 @@
           type: color; 
           to: red; 
           startEvents: mouseleave; 
+          dur: 500;"
+        animation_click="
+        property: components.material.material.color; 
+          type: color; 
+          to: yellow; 
+          startEvents: click; 
           dur: 500;">  
       </a-box>
       <a-box id="myOtherBox" 
